--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covid-summary",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "covid summary cli",
   "main": "cli.js",
   "bin": {
@@ -9,6 +9,7 @@
   "author": "bilash <bilashcse@gmail.com> (https://github.com/bilashcse)",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "cli-spinner": "^0.2.10"
   }
 }
