--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
-    "cli-spinner": "^0.2.10"
+    "cli-spinner": "^0.2.10",
+    "yargs": "^15.3.1"
   }
 }
