--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -32,22 +32,8 @@ on:
     branches:
       - master
 
-jobs:
-  publish-npm:
-#     needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@master
-        with:
-          node-version: 10.10.0
-          registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
-
-#   publish-gpr:
+# jobs:
+#   publish-npm:
 # #     needs: build
 #     runs-on: ubuntu-latest
 #     steps:
@@ -55,8 +41,22 @@ jobs:
 #       - uses: actions/setup-node@master
 #         with:
 #           node-version: 10.10.0
-#           registry-url: https://npm.pkg.github.com/
+#           registry-url: 'https://registry.npmjs.org'
 #       - run: npm ci
 #       - run: npm publish
 #         env:
-#           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+#           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+
+  publish-gpr:
+#     needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@master
+        with:
+          node-version: 10.10.0
+          registry-url: https://npm.pkg.github.com/
+      - run: npm ci
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
