--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -1,30 +1,3 @@
-# # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
-# name: Node.js Package
-
-# on:
-#   push:
-#     branches:
-#       - master # Change this to your default branch
-
-# jobs:
-#     publish-npm:
-#     needs: build
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: actions/setup-node@v1
-#         with:
-#           node-version: 10.10.0
-#           registry-url: https://registry.npmjs.org/
-#       - run: npm ci
-#       - run: npm publish
-#         env:
-#           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-          
-          
-          
 name: NPM package publish
 
 on:
@@ -32,30 +5,28 @@ on:
     branches:
       - master
 
-# jobs:
-#   publish-npm:
-# #     needs: build
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@master
-#       - uses: actions/setup-node@master
-#         with:
-#           node-version: 10.10.0
-#           registry-url: 'https://registry.npmjs.org'
-#       - run: npm ci
-#       - run: npm publish
-#         env:
-#           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
-
-  publish-gpr:
-#     needs: build
+jobs:
+  publish-npm:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
         with:
           node-version: 10.10.0
-          registry-url: https://npm.pkg.github.com/
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+
+  publish-gpr:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@master
+        with:
+          node-version: 10.10.0
+          registry-url: 'https://npm.pkg.github.com'
       - run: npm ci
       - run: npm publish
         env:
