--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covid-summary",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "covid summary cli",
   "main": "cli.js",
   "bin": {
@@ -21,6 +21,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cli-spinner": "^0.2.10",
+    "cli-table": "^0.3.1",
+    "moment": "^2.26.0",
     "yargs": "^15.3.1"
   }
 }
