--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "axios": "^0.19.2",
     "cli-spinner": "^0.2.10",
     "cli-table": "^0.3.1",
-    "moment": "^2.26.0",
-    "yargs": "^15.3.1"
+    "colors": "^1.4.0",
+    "commander": "^5.1.0",
+    "moment": "^2.26.0"
   }
 }
