--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covid-summary",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "covid summary cli",
   "main": "cli.js",
   "bin": {
@@ -9,6 +9,9 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bilashcse/covid-summary.git"
+  },
+  "publishConfig": { 
+    "registry": "https://npm.pkg.github.com/" 
   },
   "keywords": [
     "cli",
